--- a/screen/package.json
+++ b/screen/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "js-base64": "^3.7.2",
+    "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
