--- a/screen/package.json
+++ b/screen/package.json
@@ -9,6 +9,7 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "cors": "^2.8.5",
     "js-base64": "^3.7.2",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
