--- a/screen/package.json
+++ b/screen/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
+    "styled-icons": "^10.47.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
