--- a/screen/nginx.conf
+++ b/screen/nginx.conf
@@ -11,18 +11,18 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen       80;
-        server_name  trustworks.screen.dk;
-        root   /usr/share/nginx/html;
-        location / {
-            index  index.html index.htm;
-            return 301  http://trustworks.screen.dk;
-        }
-    }
+        listen       8080;
+        server_name  localhost;
 
-    server {
-      listen 80;
-      server_name http://192.168.1.138;
-      return http://trustworks.screen.dk;
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+            try_files $uri $uri/ /index.html;
+        }
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
+        }
     }
 }
