--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,5 +10,5 @@ jobs:
   docker:
     runs-on: self-hosted
     steps:
-      - run: podman build -t screen ./project-screen
+      - run: podman build -t screen .
       - run: podman run -p 8080:8080 screen
