--- a/screen/Dockerfile
+++ b/screen/Dockerfile
@@ -1,19 +1,18 @@
 # Use an official Node.js runtime as the base image
 FROM node:lts-alpine
 
-# Set the working directory in the container
-WORKDIR /app
-
 # Copy package.json and package-lock.json to the container
 COPY package*.json ./
+
+# Install project dependencies
+RUN npm install \
+&& npm install -g serve
 
 # Copy the entire project to the container
 COPY . .
 
 # Build the React app
-RUN npm install \
-    && npm install -g serve \
-    && npm run build \
+RUN npm run build \
     && rm -fr node_modules
 
 # Expose the port on which the app will run
