--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Build
-        run: podman build -t screen -f screen/Dockerfile .
+        run: docker build -t screen -f screen/Dockerfile .
       
       - name: Run
-        run: podman run -p 3000:3000 screen
+        run: docker run -p 3000:3000 screen
 
