--- a/screen/Dockerfile
+++ b/screen/Dockerfile
@@ -1,6 +1,9 @@
 # Use an official Node.js runtime as the base image
 FROM node:lts-alpine
 
+# Set the working directory in the container
+WORKDIR /app
+
 # Copy package.json and package-lock.json to the container
 COPY package*.json ./
 
