--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
         run: docker build -t screen -f screen/Dockerfile .
       
       - name: Run
-        run: docker run -d -p 3000:3000 screen
+        run: docker run -d --name screen -p 3000:3000 screen
 
