--- a/screen/Dockerfile
+++ b/screen/Dockerfile
@@ -19,7 +19,7 @@ RUN npm run build \
     && rm -fr node_modules
 
 # Close browser
-RUN killall chromium-browser \
+RUN killall chromium-browser || true \
     && chromium-browser http://localhost:3000/
 
 # Expose the port on which the app will run
