--- a/screen/Dockerfile
+++ b/screen/Dockerfile
@@ -18,18 +18,13 @@ COPY screen .
 RUN npm run build \
     && rm -fr node_modules
 
-# The "./" is the working directory e.g. /usr/app
-USER root
-RUN chmod a+w ./ -R
-
-# Close browser
-RUN pkill -f chromium-browser
-
-# Later switch back to run rest of commands and container as node non-root user 
-USER node
-
 # Expose the port on which the app will run
 EXPOSE 3000
 
 # Run the app
 CMD [ "serve", "-s", "build" ]
+
+# Restart browser
+RUN chromium-browser http://localhost:3000 \
+    && killall chromium-browser \
+    && chromium-browser http://localhost:3000
