--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,5 @@ jobs:
       - name: Run
         run: docker run -d --name screen -p 3000:3000 screen
 
+      - name: Restart browser
+        run: pkill -f chromium-browser && chromium-browser http://localhost:3000
