--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
           
+      - name: Stop and remove Docker container
+        run: docker stop screen && docker rm screen
+        
       - name: Build
         run: docker build -t screen -f screen/Dockerfile .
       
