--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,13 @@ jobs:
         uses: actions/checkout@v4
           
       - name: Stop Docker container
-        run: docker stop screen || true
+        run: docker stop screen
 
       - name: Remove Docker container
-        run: docker remove screen || true
+        run: docker remove screen
         
       - name: Build
         run: docker build -t screen -f screen/Dockerfile .
       
       - name: Run
-        run: docker run -d --restart=always --name screen -p 3000:3000 screen
+        run: docker run -d --name screen -p 3000:3000 screen
