--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         run: docker stop screen
 
       - name: Remove Docker container
-        run: docker remove screen
+        run: docker rm screen
         
       - name: Build
         run: docker build -t screen -f screen/Dockerfile .
