--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
         uses: actions/checkout@v4
           
       - name: Stop Docker container
-        run: docker stop screen || true
+        run: docker stop screen
 
       - name: Remove Docker container
-        run: docker rm screen || true
+        run: docker rm screen
         
       - name: Build
         run: docker build -t screen -f screen/Dockerfile .
