--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,10 @@ jobs:
         run: docker build -t screen -f screen/Dockerfile .
 
       - name: Run
-        env:
-          REACT_APP_USERNAME: ${{ secrets.TRUSTWORKS_USERNAME }}
-          REACT_APP_PASSWORD: ${{ secrets.TRUSTWORKS_PASSWORD }}
+        # env:
+        #   REACT_APP_USERNAME: ${{ secrets.TRUSTWORKS_USERNAME }}
+        #   REACT_APP_PASSWORD: ${{ secrets.TRUSTWORKS_PASSWORD }}
           
-        run: docker run -d --restart=always --name screen -p 3000:3000 \
-          -e REACT_APP_USERNAME=${{ secrets.TRUSTWORKS_USERNAME }} \
-          -e REACT_APP_PASSWORD=${{ secrets.TRUSTWORKS_PASSWORD }} \
-          screen
+        run: docker run -d --name screen -p 3000:3000 screen
+          # -e REACT_APP_USERNAME=${{ secrets.TRUSTWORKS_USERNAME }} \
+          # -e REACT_APP_PASSWORD=${{ secrets.TRUSTWORKS_PASSWORD }} \
